# lmnr

./: docker-compose-full.yml
app-server/: build.rs
app-server/proto/: python_sandbox_grpc.proto  sandbox_grpc.proto
app-server/src/: main.rs
app-server/src/api/v1/: mod.rs  sandbox.rs
app-server/src/pipeline/: context.rs  runner.rs
app-server/src/pipeline/nodes/: code.rs  mod.rs
app-server/src/python_sandbox/: mock.rs  mod.rs  python_sandbox_grpc.rs  python_sandbox_impl.rs
app-server/src/sandbox/: mock.rs  mod.rs  sandbox_grpc.rs  sandbox_impl.rs
frontend/components/pipeline/nodes/: input-node.tsx  output-node.tsx
frontend/components/traces/: span-card.tsx  timeline.tsx  trace.tsx  traces.tsx
frontend/components/traces/trace-view/: context.tsx  header.tsx  index.tsx  tree-view.tsx  utils.ts
python-sandbox/: Dockerfile  README.md  pyproject.toml
python-sandbox/proto/: python_sandbox.proto
python-sandbox/python_sandbox/: python_sandbox_pb2.py  python_sandbox_pb2.pyi  python_sandbox_pb2_grpc.py  server.py
sandbox/: Dockerfile  README.md  pyproject.toml
sandbox/sandbox/: sandbox_pb2.py  sandbox_pb2.pyi  sandbox_pb2_grpc.py  server.py
